2003-10-24  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Rename the status bar widget. Hint hint at future commit.

a2003-10-24  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2003-10-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (build_filename):
	Convert to locale filesystem encoding if needed.

2003-10-13  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the separator and change the default size (thanks to Paolo
	Borelli)

2003-10-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Quote the path given to Nautilus, so correctly deal with paths
	with spaces in.

2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	Get the address of fd before casting to a pointer. Whoops.

2003-10-01  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* configure.in:
	Release 0.5.5.

2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Threaded lookup!  However, CD detection etc is still blocking, but
	its an improvement.
	
2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Remember the file paths, and open the highest common folder if the
	user picks Open when the rip is completed. This makes the button
	useful :)

2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/sj-util.[ch]:
	Added g_list_deep_free()

	* src/sj-main.c:
	* src/sj-structures.c:
	Use deep_free

2003-09-30  Bastien Nocera  <hadess@hadess.net>

	* src/sj-extractor.c: (eos_cb), (tick_timeout_cb),
	(sj_extractor_extract_track), (sj_extractor_cancel_extract):
	Make sure that the pipeline is rebuilt for each track (work-around
	bug #122416)

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Correctly handle the artist in compilation CDs.

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Connect to the error callback.

2003-09-29  Ross Burton  <ross@burtonini.com>
