@@ -1,5 +1,17 @@
 2003-10-24  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.[ch]:
+	Totally rewrite, now actually works correctly!
+
+	* src/sj-extractor.[ch]:
+	Remove sj_extractor_get_track_details().
+
+	* src/sj-main.c:
+	Make more variables static, and update the UI with a NULL album
+	before displaying.
+
+2003-10-24  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Rename the status bar widget. Hint hint at future commit.
 
